--- a/index.html
+++ b/index.html
@@ -82,9 +82,7 @@
                   <img src="./images/mobile-images/mobile-work-img-1.jpg" alt="Beautiful girl" />
                 </picture>
 
-                <div class="work-thumb__box-title">
-                  <h3 class="work-thumb__title">Debby Linchen</h3>
-                </div>
+                <h3 class="work-thumb__title">Debby Linchen</h3>
               </div>
 
               <div class="box-work-info">
@@ -124,9 +122,7 @@
                   <img src="./images/mobile-images/mobile-work-img-2.jpg" alt="Child" />
                 </picture>
 
-                <div class="work-thumb__box-title">
-                  <h3 class="work-thumb__title work-thumb__title--reverse">Emily Draplin</h3>
-                </div>
+                <h3 class="work-thumb__title">Emily Draplin</h3>
               </div>
 
               <div class="box-work-info">
@@ -300,25 +296,90 @@
     </section>
 
     <!-- team  -->
-    <section>
-      <h2>Our top photographers</h2>
+    <section class="section">
+      <div class="container">
+        <h2 class="section__title section__title--center">Our top photographers</h2>
 
-      <ul>
-        <li>
-          <!-- <img src="" alt="" /> -->
-          <h3>Debby Gerard</h3>
-        </li>
+        <ul class="team-list">
+          <li class="team-list__item">
+            <picture>
+              <source
+                srcset="
+                  ./images/mobile-images/mobile-person-img-1.webp    1x,
+                  ./images/mobile-images/mobile-person-img-1@2x.webp 2x
+                "
+                type="image/webp"
+              />
+              <source
+                srcset="
+                  ./images/mobile-images/mobile-person-img-1.jpg    1x,
+                  ./images/mobile-images/mobile-person-img-1@2x.jpg 2x
+                "
+                type="image/jpeg"
+              />
+              <img
+                class="gallery-center"
+                src="./images/mobile-images/mobile-person-img-1.jpg"
+                alt="Woman"
+              />
+            </picture>
 
-        <li>
-          <!-- <img src="" alt="" /> -->
-          <h3>Derek Grafindor</h3>
-        </li>
+            <h3 class="team-list__title">Debby Gerard</h3>
+          </li>
 
-        <li>
-          <!-- <img src="" alt="" /> -->
-          <h3>Jedidiah Asamoah</h3>
-        </li>
-      </ul>
+          <li class="team-list__item">
+            <picture>
+              <source
+                srcset="
+                  ./images/mobile-images/mobile-person-img-2.webp    1x,
+                  ./images/mobile-images/mobile-person-img-2@2x.webp 2x
+                "
+                type="image/webp"
+              />
+              <source
+                srcset="
+                  ./images/mobile-images/mobile-person-img-2.jpg    1x,
+                  ./images/mobile-images/mobile-person-img-2@2x.jpg 2x
+                "
+                type="image/jpeg"
+              />
+              <img
+                class="gallery-center"
+                src="./images/mobile-images/mobile-person-img-2.jpg"
+                alt="Man"
+              />
+            </picture>
+
+            <h3 class="team-list__title">Derek Grafindor</h3>
+          </li>
+
+          <li class="team-list__item">
+            <picture>
+              <source
+                srcset="
+                  ./images/mobile-images/mobile-person-img-3.webp    1x,
+                  ./images/mobile-images/mobile-person-img-3@2x.webp 2x
+                "
+                type="image/webp"
+              />
+              <source
+                srcset="
+                  ./images/mobile-images/mobile-person-img-3.jpg    1x,
+                  ./images/mobile-images/mobile-person-img-3@2x.jpg 2x
+                "
+                type="image/jpeg"
+              />
+              <img
+                class="gallery-center"
+                src="./images/mobile-images/mobile-person-img-3.jpg"
+                alt="Man"
+              />
+            </picture>
+
+            <h3 class="team-list__title">Jedidiah Asamoah</h3>
+          </li>
+        </ul>
+      </div>
     </section>
 
     <!-- Contacts us  -->
