--- a/index.html
+++ b/index.html
@@ -439,34 +439,65 @@
     </section>
 
     <footer class="page-footer">
-      <div class="container">
-        <a href="#">SVG</a>
-        <a href="#">4107th Avenue, Grassland, Alberta, Canada</a>
+      <div class="container page-footer__container">
+        <a class="page-footer__logo" href="#">Fotografas</a>
+        <a class="page-footer__address" href="#">4107th Avenue, Grassland, Alberta, Canada</a>
 
-        <ul>
-          <li>
-            <a href="#">Our mission</a>
-          </li>
-          <li>
-            <a href="#">The team</a>
-          </li>
-        </ul>
+        <div class="about-us-box">
+          <p class="about-us-box__descr">About Us</p>
 
-        <ul>
-          <li>FAQ</li>
-          <li>Customer service</li>
-          <li>Ask a question</li>
-        </ul>
+          <ul class="about-us-box__list">
+            <li class="about-us-box__item">
+              <a class="about-us-box__link" href="#">Our mission</a>
+            </li>
 
-        <ul>
-          <li>
-            <a href="#">SVG</a>
+            <li class="about-us-box__item">
+              <a class="about-us-box__link" href="#">The team</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="support-box">
+          <p class="support-box__descr">Get Support</p>
+
+          <ul class="support-box__list">
+            <li class="support-box__item">
+              <a class="support-box__link" href="#">FAQ</a>
+            </li>
+
+            <li class="support-box__item">
+              <a class="support-box__link" href="#">Customer service</a>
+            </li>
+
+            <li class="support-box__item support-box__item--hidden">
+              <a class="support-box__link" href="#">Ask a question</a>
+            </li>
+          </ul>
+        </div>
+
+        <ul class="social-network-list">
+          <li class="social-network-list__item">
+            <a class="social-network-list__link" href="#">
+              <svg class="social-network-list__icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
           </li>
-          <li>
-            <a href="#">SVG</a>
+
+          <li class="social-network-list__item">
+            <a class="social-network-list__link" href="#">
+              <svg class="social-network-list__icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
           </li>
-          <li>
-            <a href="#">SVG</a>
+
+          <li class="social-network-list__item">
+            <a class="social-network-list__link" href="#">
+              <svg class="social-network-list__icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
           </li>
         </ul>
       </div>
