--- a/index.html
+++ b/index.html
@@ -17,28 +17,34 @@
             </svg>
           </a>
 
-          <button class="menu-btn" type="button">
+          <button class="menu-btn open-menu" type="button">
             <svg class="menu-btn__icon" aria-label="open menu button" width="40" height="40">
               <use href="./images/icons.svg#icon-menu"></use>
             </svg>
           </button>
 
-          <div class="menu-container">
-            <ul>
-              <li>
-                <a href="#">Home</a>
+          <div class="menu-container mobile-menu">
+            <button class="menu-btn menu-btn--close close-menu" type="button">
+              <svg class="menu-btn__icon" aria-label="close menu button" width="40" height="40">
+                <use href="./images/icons.svg#icon-menu-close-btn"></use>
+              </svg>
+            </button>
+
+            <ul class="menu-container__list">
+              <li class="menu-container__item">
+                <a class="menu-container__link" href="#">Home</a>
               </li>
 
-              <li>
-                <a href="#">Services</a>
+              <li class="menu-container__item">
+                <a class="menu-container__link" href="#">Services</a>
               </li>
 
-              <li>
-                <a href="#">Gallery</a>
+              <li class="menu-container__item">
+                <a class="menu-container__link" href="#">Gallery</a>
               </li>
 
-              <li>
-                <a href="#">Contact</a>
+              <li class="menu-container__item">
+                <a class="menu-container__link" href="#">Contact</a>
               </li>
             </ul>
           </div>
@@ -502,5 +508,7 @@
         </ul>
       </div>
     </footer>
+
+    <script src="./js/menu.js"></script>
   </body>
 </html>
