--- a/index.html
+++ b/index.html
@@ -79,15 +79,15 @@
               </li>
 
               <li class="menu-container__item">
-                <a class="menu-container__link" href="#">Services</a>
+                <a class="menu-container__link" href="#services">Services</a>
               </li>
 
               <li class="menu-container__item">
-                <a class="menu-container__link" href="#">Gallery</a>
+                <a class="menu-container__link" href="#gallery">Gallery</a>
               </li>
 
               <li class="menu-container__item">
-                <a class="menu-container__link" href="#">Contact</a>
+                <a class="menu-container__link" href="#contacts">Contact</a>
               </li>
             </ul>
           </div>
@@ -230,7 +230,7 @@
     </section>
 
     <!-- Services  -->
-    <section class="section">
+    <section class="section" id="services">
       <div class="container services-container">
         <h2 class="section__title services-container__title">Services</h2>
 
@@ -424,7 +424,7 @@
     </section>
 
     <!-- Gallery  -->
-    <section class="section">
+    <section class="section" id="gallery">
       <div class="container">
         <h2 class="section__title">Gallery</h2>
       </div>
@@ -607,7 +607,7 @@
     </section>
 
     <!-- Contacts us  -->
-    <section class="section contacts-section">
+    <section class="section contacts-section" id="contacts">
       <div class="container">
         <h2 class="section__title contacts-section__title">Contact us</h2>
 
