--- a/index.html
+++ b/index.html
@@ -149,7 +149,9 @@
                   <img src="./images/mobile-images/mobile-work-img-1.jpg" alt="Beautiful girl" />
                 </picture>
 
-                <h3 class="work-thumb__title">Debby Linchen</h3>
+                <div class="work-thumb__box">
+                  <h3 class="work-thumb__title">Debby Linchen</h3>
+                </div>
               </div>
 
               <p class="work-thumb__descr">
@@ -201,7 +203,9 @@
                   <img src="./images/mobile-images/mobile-work-img-2.jpg" alt="Child" />
                 </picture>
 
-                <h3 class="work-thumb__title">Emily Draplin</h3>
+                <div class="work-thumb__box">
+                  <h3 class="work-thumb__title">Emily Draplin</h3>
+                </div>
               </div>
 
               <p class="work-thumb__descr work-thumb__descr--left">
@@ -220,7 +224,8 @@
     </section>
 
     <!-- Services  -->
-    <section class="section" id="services">
+    <section class="section">
+      <span class="anchor" id="services"></span>
       <div class="container services-container">
         <h2 class="section__title services-container__title">Services</h2>
 
@@ -414,7 +419,8 @@
     </section>
 
     <!-- Gallery  -->
-    <section class="section" id="gallery">
+    <section class="section">
+      <span class="anchor" id="gallery"></span>
       <div class="container">
         <h2 class="section__title">Gallery</h2>
       </div>
@@ -597,7 +603,8 @@
     </section>
 
     <!-- Contacts us  -->
-    <section class="section contacts-section" id="contacts">
+    <section class="section contacts-section">
+      <span class="anchor" id="contacts"></span>
       <div class="container">
         <h2 class="section__title contacts-section__title">Contact us</h2>
 
