--- a/index.html
+++ b/index.html
@@ -369,43 +369,41 @@
             Sessions
           </h2>
 
-          <picture>
-            <source
-              srcset="
-                ./images/mobile-images/mobile-sessions-img.webp    1x,
-                ./images/mobile-images/mobile-sessions-img@2x.webp 2x
-              "
-              media="(max-width: 1319px)"
-              type="image/webp"
-            />
-            <source
-              srcset="
-                ./images/mobile-images/mobile-sessions-img.jpg    1x,
-                ./images/mobile-images/mobile-sessions-img@2x.jpg 2x
-              "
-              media="(max-width: 1319px)"
-              type="image/jpeg"
-            />
-            <source
-              srcset="
-                ./images/desktop-images/desktop-sessions-img.webp    1x,
-                ./images/desktop-images/desktop-sessions-img@2x.webp 2x
-              "
-              type="image/webp"
-            />
-            <source
-              srcset="
-                ./images/desktop-images/desktop-sessions-img.jpg    1x,
-                ./images/desktop-images/desktop-sessions-img@2x.jpg 2x
-              "
-              type="image/jpeg"
-            />
-            <img
-              class="sessions-box__img"
-              src="./images/mobile-images/mobile-sessions-img.jpg"
-              alt="Studia"
-            />
-          </picture>
+          <div class="sessions-box__thumb">
+            <picture>
+              <source
+                srcset="
+                  ./images/mobile-images/mobile-sessions-img.webp    1x,
+                  ./images/mobile-images/mobile-sessions-img@2x.webp 2x
+                "
+                media="(max-width: 1319px)"
+                type="image/webp"
+              />
+              <source
+                srcset="
+                  ./images/mobile-images/mobile-sessions-img.jpg    1x,
+                  ./images/mobile-images/mobile-sessions-img@2x.jpg 2x
+                "
+                media="(max-width: 1319px)"
+                type="image/jpeg"
+              />
+              <source
+                srcset="
+                  ./images/desktop-images/desktop-sessions-img.webp    1x,
+                  ./images/desktop-images/desktop-sessions-img@2x.webp 2x
+                "
+                type="image/webp"
+              />
+              <source
+                srcset="
+                  ./images/desktop-images/desktop-sessions-img.jpg    1x,
+                  ./images/desktop-images/desktop-sessions-img@2x.jpg 2x
+                "
+                type="image/jpeg"
+              />
+              <img src="./images/mobile-images/mobile-sessions-img.jpg" alt="Studia" />
+            </picture>
+          </div>
 
           <p class="sessions-box__text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Laoreet habitant facilisis
