--- a/index.html
+++ b/index.html
@@ -37,61 +37,60 @@
   </head>
   <body>
     <header class="page-header">
-      <div class="container">
-        <nav class="site-nav">
-          <a class="logo" href="#">
-            <picture>
-              <svg
-                class="logo__icon logo__icon--mobile"
-                aria-label="site logo"
-                width="56"
-                height="16"
-              >
-                <use href="./images/icons.svg#icon-mobile-logo"></use>
-              </svg>
-              <svg
-                class="logo__icon logo__icon--desktop"
-                aria-label="site logo"
-                width="154"
-                height="22"
-              >
-                <use href="./images/icons.svg#icon-logo"></use>
-              </svg>
-            </picture>
-          </a>
+      <div class="container page-header__container">
+        <a class="logo" href="#">
+          <picture>
+            <svg
+              class="logo__icon logo__icon--mobile"
+              aria-label="site logo"
+              width="56"
+              height="16"
+            >
+              <use href="./images/icons.svg#icon-mobile-logo"></use>
+            </svg>
+            <svg
+              class="logo__icon logo__icon--desktop"
+              aria-label="site logo"
+              width="154"
+              height="22"
+            >
+              <use href="./images/icons.svg#icon-logo"></use>
+            </svg>
+          </picture>
+        </a>
 
-          <button class="menu-btn open-menu" type="button">
-            <svg class="menu-btn__icon" aria-label="open menu button" width="40" height="40">
-              <use href="./images/icons.svg#icon-menu"></use>
+        <button class="menu-btn open-menu" type="button">
+          <svg class="menu-btn__icon" aria-label="open menu button" width="40" height="40">
+            <use href="./images/icons.svg#icon-menu"></use>
+          </svg>
+        </button>
+
+        <div class="menu-container mobile-menu">
+          <button class="menu-btn menu-btn--close close-menu" type="button">
+            <svg class="menu-btn__icon" aria-label="close menu button" width="40" height="40">
+              <use href="./images/icons.svg#icon-menu-close-btn"></use>
             </svg>
           </button>
-
-          <div class="menu-container mobile-menu">
-            <button class="menu-btn menu-btn--close close-menu" type="button">
-              <svg class="menu-btn__icon" aria-label="close menu button" width="40" height="40">
-                <use href="./images/icons.svg#icon-menu-close-btn"></use>
-              </svg>
-            </button>
-
-            <ul class="menu-container__list">
-              <li class="menu-container__item">
-                <a class="menu-container__link" href="#">Home</a>
+          <nav class="site-nav">
+            <ul class="site-nav__list">
+              <li class="site-nav__item">
+                <a class="site-nav__link" href="#">Home</a>
               </li>
 
-              <li class="menu-container__item">
-                <a class="menu-container__link" href="#services">Services</a>
+              <li class="site-nav__item">
+                <a class="site-nav__link" href="#services">Services</a>
               </li>
 
-              <li class="menu-container__item">
-                <a class="menu-container__link" href="#gallery">Gallery</a>
+              <li class="site-nav__item">
+                <a class="site-nav__link" href="#gallery">Gallery</a>
               </li>
 
-              <li class="menu-container__item">
-                <a class="menu-container__link" href="#contacts">Contact</a>
+              <li class="site-nav__item">
+                <a class="site-nav__link" href="#contacts">Contact</a>
               </li>
             </ul>
-          </div>
-        </nav>
+          </nav>
+        </div>
       </div>
     </header>
 
